@@ -125,6 +125,31 @@
           <forkCount>1</forkCount>
         </configuration>
       </plugin>
+      <!-- Maven Failsafe Plugin for Integration Tests -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>3.2.5</version>
+        <configuration>
+          <argLine>@{argLine} --enable-preview</argLine>
+          <includes>
+            <include>**/*IT.java</include>
+            <include>**/IT*.java</include>
+          </includes>
+          <parallel>methods</parallel>
+          <threadCount>2</threadCount>
+          <reuseForks>true</reuseForks>
+          <forkCount>1</forkCount>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <!-- JaCoCo Plugin for Code Coverage - Pragmatic 100% -->
       <plugin>
         <groupId>org.jacoco</groupId>
